# BOT_SRegexp

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  release-url  showcase.yaml
.github/workflows/: ci.yaml
mysql/: scheme.sql
src/: config.rs  main.rs
src/generator/: mod.rs
src/handler/: mod.rs
src/model/: api.rs  db.rs  mod.rs
src/parser/: mod.rs
