[package]
name = "bot-randregex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
nom = "7.1.3"
rand = "0.8.5"
regex = "1.8.1"
sqlx = { version = "0.6.3", features = ["mysql", "chrono"] }
traq-ws-bot = { version = "0.1.2", features = ["openapi"] }
