[package]
name = "bot-randregex"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
nom = "7.1.3"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.8.1"
sqlx = { version = "0.7.4", features = [
  "mysql",
  "chrono",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
traq-ws-bot = { version = "0.1.2", features = ["openapi"] }
uuid = "1.3.1"
